# Q2-Assignment

Agent in Specific Domain/Project/: .env  README.md  pyproject.toml
Agent in Specific Domain/Project/src/project/: main.py
Hello World Agent/: main.py
